# spped-post

./: .gitignore  CMakeLists.txt  README.md
.codex/project-architecture/: SKILL.md
include/: MainWindow.h
include/common/: StringUtils.h
include/core/: DatabaseManager.h
include/models/: Folder.h  Request.h  SavedRequest.h
include/modules/folder/: FolderModel.h  FolderRepository.h  FolderService.h
include/modules/request/: HttpService.h  RequestModel.h  RequestRepository.h  RequestService.h  SavedRequestModel.h
include/services/: HttpService.h  RequestRepository.h
include/ui/: MainWindow.h  MainWindowController.h  RequestWorkspaceWidget.h  SidebarWidget.h
resources/: resources.qrc
resources/styles/: postman.qss
src/: MainWindow.cpp  main.cpp
src/common/: StringUtils.cpp
src/core/: DatabaseManager.cpp
src/modules/folder/: FolderRepository.cpp  FolderService.cpp
src/modules/request/: HttpService.cpp  RequestRepository.cpp  RequestService.cpp
src/services/: HttpService.cpp  RequestRepository.cpp
src/ui/: MainWindow.cpp  MainWindowController.cpp  RequestWorkspaceWidget.cpp  SidebarWidget.cpp
